Barra de navegação responsiva

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,8 @@
     background-image: url("img/capa.jpg");
     background-size: cover;
 }
+@media (max-width: 600px){
+    .nav{
+        flex-direction: column;
+    }
+}
