--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 70px;
+    height: 8vh;
     padding: 0 5%;
 }
 .nav-loja img{
-    width: 70px;
+    height: 8vh;
 }
 .nav-div {}
 .nav-opcoes {
@@ -55,9 +55,27 @@
     font-weight: bold;
 }
 .inicio {
-    height: 100vh;
+    height: 92vh;
     background-image: url("img/capa.jpg");
-    background-size: cover;
+    background-color: #dcd2d1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.inicio-titulo {
+    font-size: clamp(3rem, 10vw, 8rem);
+}
+.subtitulo {
+    font-size: clamp(1.0rem, 4vw, 2rem);
+}
+.div-bt {
+    display: flex;
+    justify-content: center;
+}
+.bt-contato {
+    background-color: #eba215;
+    border: none;
+    width: clamp(6rem, 20vw, 10rem);
 }
 @media (max-width: 600px){
     .nav{
