--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,13 @@
 }
 .inicio {
     height: 92vh;
-    background-image: url("capa.jpg");
     background-color: #dcd2d1;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .inicio-titulo {
     font-size: clamp(3rem, 10vw, 8rem);
@@ -73,11 +75,15 @@
 .div-bt {
     display: flex;
     justify-content: center;
+    margin-top: 10px;
 }
 .bt-contato {
-    background-color: #eba215;
+    background-color: #eba4157c;
     border: none;
-    width: clamp(6rem, 20vw, 10rem);
+    width: clamp(6rem, 14vw, 10rem);
+    border-radius: 50px;
+    font-size: clamp(0.8rem, 2vw, 1.2rem); 
+    padding: 4px;
 }
 
 /** Imagem de transicao **/
