--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,31 @@
 .endereco-numero p {
     padding: 2px 0;
 }
+
+/** Rodape **/
+
+.rodape-opcoes{
+    gap: 5vw;
+    padding: 30px 10px;
+}
+.rodape p{
+    color: #ffffff;
+    font-size: clamp(0.6rem, 2vw, 0.8rem); 
+}
+.rodape ul {
+    display: flex;
+    justify-content: center;
+}
+.logo-footer a img{
+    height: 8vh;
+}
+.nav-footer-itens {
+    display: flex;
+    flex-direction: column;
+}
+.endereco {
+    max-width: 200px;
+}
 @media (max-width: 800px){
     .opcoes-contato {
         flex-direction: column-reverse;
@@ -159,6 +184,14 @@
     .mapa {
         width: 90vw;
         height: 60vh;
+    }
+    .rodape ul {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .endereco {
+        max-width: 100px;
     }
 }
 @media (max-width: 460px) {
