--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@
 .nav-loja img{
     height: 8vh;
 }
-.nav-div {}
 .nav-opcoes {
     display: flex;
     justify-content: space-between;
@@ -86,6 +85,45 @@
     padding: 4px;
 }
 
+/** Sobre **/
+.sobre {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    padding-top: 20px;
+}
+.bt-rede-social button{
+    border: none;
+}
+.bi {
+    background-color: #eba215;
+    color: #ffffff;
+    padding: 3px 8px 8px;
+    border-radius: 5px;
+    font-size: clamp(1.0rem, 3vw, 1.5rem); 
+}
+.loja-descricao{
+    font-size: clamp(1.0rem, 2vw, 1.2rem);
+    max-width: 500px;
+    margin: 20px 30px;
+}
+.redes-sociais {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.sp {
+    display: none;
+}
+.loja {
+    display: flex;
+    align-items: center;
+}
+.loja img{
+    width: 40vw;
+    margin: 20px;
+
+}
 /** Imagem de transicao **/
 .imagem-transicao {
     margin: 50px 0;
@@ -121,11 +159,9 @@
     display: flex;
     gap: 5vw;
 }
-.horarios {}
 .horarios-titulo {
     padding-bottom: 4px;
 }
-.horarios-lista{}
 .endereco-numero {
     max-width: 200px;
     display: flex;
@@ -160,6 +196,7 @@
 .endereco {
     max-width: 200px;
 }
+
 @media (max-width: 800px){
     .opcoes-contato {
         flex-direction: column-reverse;
@@ -169,6 +206,22 @@
     .mapa {
         width: 70vw;
         height: 60vh;
+    }
+}
+@media (max-width: 700px){
+    .sobre {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .pc {
+        display: none;
+    }
+    .sp {
+        display: flex;
+    }
+    .loja img{
+        width: 80vw;
     }
 }
 @media (max-width: 600px){
